2018-01-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add vacuum_permeability and vacuum_permittivity as names for magnetic and electric constants
	* Add completion only names to enable completion of greek letters from the roman letter names

2018-01-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix segfault on extremum(cot(x),x)

2018-01-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix variables (including electric constant) with units parameter and pi in expression

2018-01-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix unicode signs in expressions with quotations

2017-12-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* sinc() function

2017-12-08 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Suppress gnuplot error output in terminal

2017-12-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix x = 0 m && x != 0

2017-12-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix exact calculation of sqrt(-1/8)

2017-11-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Infinity fixes/enhancements. Unsigned infinity removed.

2017-11-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix (a+b*i)^0

2017-11-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Enhanced display of repeating decimals
	* Fix numbers less than 1 when max decimals is 0
	* Enhanced display of parsed expression
	* Digit grouping

2017-11-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to disable units in physical constants

2017-11-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix engineering mode (exp mode < -1) for rational numbers < 1 with few decimals
	* Fix complex number multiplication (a+b*i)*(c+d*i)

2017-11-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Interval arithmetic

2017-10-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Bitcoins
	* Use 'X' and 'E' (or approprioate unicode characters) instead of 'A' and 'B' in duodecimal numbers
	* Set approximate flag in zeta
